# kaswin

./: .gitattributes  .gitignore  CHANGELOG.md  README.en.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  protocol-manifest.json  release-notes-v0.9.13.1.md  release-notes-v0.9.13.md  vite.config.ts
beacon-prover/: Cargo.toml  README.md  prove-request.json
beacon-prover/drand-verify/: Cargo.toml
beacon-prover/drand-verify/src/: lib.rs  points.rs  verify.rs
beacon-prover/host/: Cargo.toml
beacon-prover/host/src/: main.rs
beacon-prover/methods/: Cargo.toml
beacon-prover/methods/guest/: Cargo.toml
beacon-prover/methods/guest/src/: main.rs
docs/: audit-evidence-matrix.md  backlog.md  contract-compatibility.md  development-verification-loop.md  github-submission-checklist.md  kaspa_toccata_static_raffle_spec.md  mainnet-validation-log.md  offline-indexer-benchmark.md  protocol-vnext.md  release-compatibility.json  technical-guide.zh-CN.md  testnet-validation-log.md  user-guide.zh-CN.md  validation-requirements.zh-CN.md
indexer/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  raffle-indexer.mjs
oracle/: README.md  package-lock.json  package.json  raffle-oracle.mjs
patches/: silverscript-opblake2b-with-key.patch  silverscript-opzk-precompile.patch
scripts/: compile-raffle-contract.mjs  create-experiment-wallet.mjs  generate-validation-evidence.mjs  inline-spa.mjs  verify-batch-refund-contract.mjs  verify-chain-randomness.mjs  verify-covenant-artifact.mjs  verify-dev-loop.mjs  verify-indexer.mjs  (+31 more)
(+122 files in other folders)
