[workspace]
resolver = "2"
members = ["drand-verify", "host", "methods"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
hex = "0.4"
risc0-build = "=3.0.4"
risc0-zkvm = "=3.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
