[package]
name = "drand-verify"
description = "A drand verification library."
version = "0.6.2"
authors = ["Simon Warta <simon@warta.it>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/noislabs/drand-verify"

[lib]
crate-type = ["rlib"]

[dependencies]
pairing = "0.23.0"
bls12_381 = { version = "0.8.0", features = ["experimental"] }
sha2 = { version = "0.9.1", default-features = false } # Must match bls12_381's digest version.

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4.1"
